manifests/deployment-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: learning-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: python:3.9-slim
          ports:
          - containerPort: 5000
          volumeMounts:
          - name: config-volume
            mountPath: /etc/config
          - name: logs-volume
            mountPath: /app/logs
          command: ["/bin/sh", "-c"]
          args:
            - >
              [...]
          volumes:
          - name: config-volume
            configMap:
              name: backend-config
          - name: logs-volume
            persistentVolumeClaim:
              claimName: backend-logs-pvc
