manifests/service-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: learning-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
