manifests/service-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: learning-ns
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
